// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`searchHelpers converSearchStringToObject converts search string 1`] = `
Object {
  "contextFilters": Array [],
  "language-filter": Array [
    "1",
    "2",
    "3",
  ],
  "levels": Array [
    "urn:test:3",
    "urn:test:1",
    "urn:test:2",
  ],
  "page": "3",
  "query": "test",
  "subjects": Array [
    "urn:test:3",
    "urn:test:1",
    "urn:test:2",
  ],
}
`;

exports[`searchHelpers converSearchStringToObject with no location 1`] = `
Object {
  "contextFilters": Array [],
  "language-filter": Array [],
  "levels": Array [],
  "subjects": Array [],
}
`;

exports[`searchHelpers resultsWithContentTypeBadgeAndImage for subjects 1`] = `
Array [
  Object {
    "contentType": "subject",
    "contentTypeIcon": <SubjectBadge
      background={true}
      size="x-small"
    />,
    "contentTypeLabel": undefined,
    "contentTypes": Array [
      "subject-material",
      "subject",
    ],
    "contexts": Array [],
    "id": "121",
    "image": <Image
      alt="bilde alt"
      src="https://ndla.no/image-api/raw/id/18"
    />,
    "metaImage": Object {
      "alt": "bilde alt",
      "url": "https://ndla.no/image-api/raw/id/18",
    },
    "title": "Analyse av medieuttrykk",
    "url": "/subjects/subject:1/topic:1:186479/topic:1:106142",
    "urls": Array [
      Object {
        "contentType": "subject-material",
        "url": "/subjects/subject:14/topic:1:103867/topic:1:185606/resource:1:106142",
      },
      Object {
        "contentType": "subject",
        "url": "/subjects/subject:1/topic:1:186479/topic:1:106142",
      },
    ],
  },
  Object {
    "contentType": "learning-path",
    "contentTypeIcon": <LearningPathBadge
      background={true}
      size="x-small"
    />,
    "contentTypeLabel": undefined,
    "contentTypes": Array [
      "learning-path",
    ],
    "contexts": Array [],
    "id": "121",
    "image": <Image
      alt="bilde alt"
      src="https://ndla.no/image-api/raw/id/17"
    />,
    "metaImage": Object {
      "alt": "bilde alt",
      "url": "https://ndla.no/image-api/raw/id/17",
    },
    "title": "Fortelleteknikk i digitale medier",
    "url": Object {
      "href": "https://ndla.no/learningpaths/10/first-step",
      "rel": "noopener noreferrer",
      "target": "_blank",
    },
    "urls": Array [
      Object {
        "contentType": "learning-path",
        "url": Object {
          "href": "https://ndla.no/learningpaths/10/first-step",
          "rel": "noopener noreferrer",
          "target": "_blank",
        },
      },
    ],
  },
]
`;

exports[`searchHelpers searchResultToLinkProps article 1`] = `
Object {
  "to": "/urn:lp:300",
}
`;

exports[`searchHelpers searchResultToLinkProps article without paths 1`] = `
Object {
  "to": "/404",
}
`;

exports[`searchHelpers searchResultToLinkProps learningpath 1`] = `
Object {
  "rel": "noopener noreferrer",
  "target": "_blank",
  "to": "https://learningpath-frontend.test.api.ndla.no/learningpaths/500/first-step",
}
`;
